--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIt"
 python = "^3.8"
 django-mptt = "^0.11.0"
 autopep8 = "^1.5.3"
+django = "^3.0.8"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
