--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.8"
 django-mptt = "^0.11.0"
+django-fontawesome = "^1.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
